css/app-ui.css
/**
 * App
       d8888                 
      d88888                 
     d88P888                 
    d88P 88888888b. 88888b.  
   d88P  888888 "88b888 "88b 
  d88P   888888  888888  888 
 d8888888888888 d88P888 d88P 
d88P     88888888P" 88888P"  
            888     888      
            888     888      
            888     888      
**/
html,
body {
	height: 100%;
	overflow: hidden;
}

/* TODO: testing */
hr {
	border: 2px solid red;
}

textarea {
	max-width: 100%;
}

.fill-width {
	width: 100%;
}

a[ng-click] {
	cursor: pointer;
}

.truncated {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.input-group-extra {
	display: table-cell;
	line-height: 1;
	font-size: 20px;
	vertical-align: middle;
	padding: 0 6px;
}

.editable-text {
	position: relative;
}

	.editable-text label {
		display: block;
		margin: 0;
	}

	.editable-text span.glyphicon {
		position: absolute;
		left: 0;
		top: 0.5em;
	}

	.editable-text p {
		padding-left: 1.25em;
		margin: 0;
	}

		.editable-text input {
			border: none;
			background: transparent;
		}

			.editable-text:hover input {
				background: rgba(255, 255, 255, 0.15);
			}

			.editable-text input:focus {
				background: #fff;
				color: #666;
				outline: 0;
			}

.wrap {
	position: relative;
	height: 100%;
	width: 100%;
	clear: both;
	display: table;
}

.wrapInner {
	height: 100%;
	background: #111;
	display: table-row;
}

.scrollable {
	overflow-y: auto;
	height: 100%;
}

.row-gutter-1x {
	margin-top: 20px;
}

a.icon-inline {
	display: inline-block;
	margin-left: 1em;
}

.icon-subtle {
	color: rgba(0, 0, 0, 0.2);
}

.icon-subtler {
	color: rgba(0, 0, 0, 0.1);
}

	.icon-subtle a:hover,
	a.icon-subtle:hover,
	.icon-subtler a:hover,
	a.icon-subtler:hover {
		color: #428bca;
	}

.theme-inverse {
	background: #333;
	color: #bbb;
}

	.theme-inverse :not(.theme-inverse-exclude) a {
		color: #fff;
	}

.theme-alt {
	background: #aaa;
}

	.theme-alt .quip {
		color: #aaa;
	}

.list-icon-menu li {
	margin: 0.5em 0;
}

	.list-icon-menu.list-inline li {
		margin-right: 0.5em;
	}

var,
.var {
	font-family: monospace;
	font-style: normal;
}




/**
 * Panes
8888888b.                                  
888   Y88b                                 
888    888                                 
888   d88P 8888b. 88888b.  .d88b. .d8888b  
8888888P"     "88b888 "88bd8P  Y8b88K      
888       .d888888888  88888888888"Y8888b. 
888       888  888888  888Y8b.         X88 
888       "Y888888888  888 "Y8888  88888P' 
**/
.pane {
	position: relative;
	z-index: 2;
	-webkit-transition-duration: 700ms;
}

	.paneToggle label {
		color: #428bca;
		cursor: pointer;
		-webkit-transform: rotate(0deg);
		-webkit-transition-duration: 500ms;
	}

		.paneToggle label:hover {
			color:#2a6496
		}

			.paneToggleCheckbox:checked + * .paneToggle label {
				-webkit-transform: rotate(180deg);
			}

	.paneTop {
		margin-top: -266px;
		height: 270px;
		padding: 20px 60px;
		padding-top: 70px;
	}

		.paneTop .paneToggle {
			position: absolute;
			left: 40px;
			bottom: -70px;
			font-size: 36px;
			padding: 20px 20px 0 20px;
		}

		.paneToggleCheckbox:checked + .paneTop {
			margin-top: 0;
		}

	.paneSplit {
		display: table-cell;
		height: 100%;
		position: relative;
	}

	.paneRight {
		width: 40px;
		-webkit-transition-duration: 500ms;
	}

		.paneToggleCheckbox:checked + * .paneRight,
		.picking .paneRight {
			width: 400px;
		}

		.paneRight .pane {
			height: 100%;
			width: 400px;
			position: absolute;
			left: 0;
			top: 0;
			padding: 40px;
		}

		.paneRight .paneToggle {
			position: absolute;
			left: 5px;
			top: 60px;
			font-size: 26px;
		}

			.picking .paneRight .paneToggle {
				display: none;
			}


.paneStoryEdit {

}

.topBar {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	height: 40px;
	padding: 10px 60px;
	background: #111;
}

.panePassages .list-passages {
}

	.panePassages .list-passages li {
		margin: 1em 0;
	}

		.panePassages .list-passages li a .badge {
			background: #428bca;
			color: #eee;
		}

		.panePassages .scrollable {
			margin-top: 2em;
			height: calc(100% - 130px);
		}

	.panePassages .pickingMessage {
		display: none;
		position: absolute;
		left: -100%;
		top: 160px;
		width: 100%;
		padding-right: 40px;
		text-align: right;
		color: #fff;
	}
		.picking .panePassages .pickingMessage {
			display: block;
		}

		.panePassages .pickingMessage a {
			color: #f88;
		}

			.panePassages .pickingMessage a:hover {
				color: #d66;
			}



/**
 * Stories
 .d8888b. 888                  d8b                 
d88P  Y88b888                  Y8P                 
Y88b.     888                                      
 "Y888b.  888888 .d88b. 888d888888 .d88b. .d8888b  
    "Y88b.888   d88""88b888P"  888d8P  Y8b88K      
      "888888   888  888888    88888888888"Y8888b. 
Y88b  d88PY88b. Y88..88P888    888Y8b.         X88 
 "Y8888P"  "Y888 "Y88P" 888    888 "Y8888  88888P' 
**/
.menuTop {
	padding-top: 40px;
}

	.menuTop ul {
		margin: 0;
		padding: 20px 60px;
	}

.storiesListMenu {
	padding-top: 20px;
}

.storiesList {
	padding-bottom: 200px;
}

	.storiesList li > div {
		position: relative;
		background: #ccc;
		padding: 10px;
		height: 325px;
		margin-top: 40px;
	}

	.storiesList h3 {
		margin-top: 0;
	}

	.storiesList p {
		margin-top: 1em;
	}

	.storiesList .list-icon-menu {
		position: absolute;
		left: 10px;
		bottom: 0;
	}
/* ... */

